--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# ???????? debug ??????????? ??? Spring WebSocket
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.web.socket.server=DEBUG
+logging.level.org.springframework.web.socket.messaging=DEBUG
+logging.level.org.springframework.messaging.simp=DEBUG
+logging.level.org.springframework.messaging.simp.stomp=DEBUG
+logging.level.org.springframework.messaging.simp.broker=DEBUG
+
+# ????? debug Spring
+logging.level.org.springframework=DEBUG
